--- a/template.tex
+++ b/template.tex
@@ -578,6 +578,8 @@ It is tabulated as in TABLE \ref{table:1}.
 
 \begin{table}[h!]
 \centering
+\caption{The Coenergy measured by FEMM using different method with nonlinear core}
+\label{table:1}
 \begin{tabular}{|p{2.5cm}p{2.5cm}p{2.5cm}|} 
 	\hline
 	Displacement (mm) & Coenergy measured by intergal (J)& Coenergy measured by trapz (J)\\  
@@ -617,8 +619,7 @@ It is tabulated as in TABLE \ref{table:1}.
 	4.9 & 0.000877 & 0.000909\\
 	\hline
 \end{tabular}
-\caption{The Coenergy measured by FEMM using different method with nonlinear core}
-\label{table:1}
+
 \end{table}
 It can be seen that the difference between the Coenergy measured using two different method always
 exists. Thus, it is necessary to decide which one should be used. It is readily to say that the Coenergy
@@ -699,6 +700,8 @@ Thus, higher mesh density could help the users to achieve better observation of 
 
 \begin{table}[H]
 	\centering
+	\caption{The quantity of meshing elements measured in different meshing configuration}
+	\label{table:2}
 	\begin{tabular}{|p{4.5cm}p{2cm}|} 
 	\hline
 	meshsize & mesh elements \\
@@ -723,8 +726,7 @@ Thus, higher mesh density could help the users to achieve better observation of 
 	automesh with segment meshing option & 26562 \\
 	\hline
 	\end{tabular}
-	\caption{The quantity of meshing elements measured in different meshing configuration}
-	\label{table:2}
+
 \end{table}
 
 
@@ -745,17 +747,17 @@ this sort of issues. For instance, NEC, HFSS, COMSOL Multiphysics and so on are 
 
 
 
-\cite{applications}
-\cite{notes_b}
-\cite{biology_application}
-\cite{civil_application}
-\cite{dynamics_application}
-\cite{notes_a}
-\cite{notes_course}
-\cite{Simscape}
-\cite{Simscape_Electrical}
-\cite{actuator_lock}
-\cite{3D_simulation_software}
+%\cite{applications}
+%\cite{notes_b}
+%\cite{biology_application}
+%\cite{civil_application}
+%\cite{dynamics_application}
+%\cite{notes_a}
+%\cite{notes_course}
+%\cite{Simscape}
+%\cite{Simscape_Electrical}
+%\cite{actuator_lock}
+%\cite{3D_simulation_software}
 
 
 
